manifests/traefik/forward-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-auth
  namespace: monitoring
spec:
  forwardAuth:
    address: http://ak-outpost-traefik.monitoring.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: external-https-headers
  namespace: monitoring
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: uptime-kuma-root-redirect
  namespace: monitoring
spec:
  redirectRegex:
    regex: "^https?://status\\.pablomarelli\\.dev/?$"
    replacement: "https://status.pablomarelli.dev/status/public"
    permanent: false
